# pyver

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: build.yml  changelog.yml  check.yml  checks.yml  docs.yml  format.yml  lint.yml  md_checks.yml  package.yml  tests.yml
src/: lib.rs  validator.rs  version.rs
src/ids/: dev_id.rs  mod.rs  post_id.rs  pre_id.rs  release_id.rs
