[package]
name = "pyver"
description = "Python PEP-440 Version Parser"
authors = [
  "Allstreamer <allstreamer.contact@gmail.com>",
  "Jan Bronicki <janbronicki@gmail.com>",
]
license = "MIT"
version = "1.0.0"
keywords = ["versions", "python", "parser", "semver", "pep-440"]
readme = "README.md"
edition = "2021"
repository = "https://github.com/Allstreamer/pyver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
serde = { version = "1", features = ["derive"] }
regex = { version = "1" }
lazy_static = { version = "1.4.0" }
pomsky-macro = { version = "0.6.0" }
derivative = { version = "2.2.0" }
